# 2E_EVRPTW

./: ACO.docx  CMakeLists.txt  MV.txt  Utilizacao Rotas Heuristica.txt  aco.txt  execTeste.sh  mvShifit.txt  rmBuild.sh  testes.py  testesNew.py
Bi-Level-master/Code/: Bi-Level.py  Instance.py
Bi-Level-master/Instances/Montoya et al. 2016/: tc0c10s2cf1.xml  tc0c10s2ct1.xml  tc0c10s3cf1.xml  tc0c10s3ct1.xml  tc0c160s16cf2.xml  tc0c160s16cf4.xml  tc0c160s16ct2.xml  tc0c160s16ct4.xml  tc0c160s24cf2.xml  tc0c160s24cf4.xml  tc0c160s24ct2.xml  tc0c160s24ct4.xml  tc0c20s3cf2.xml  tc0c20s3ct2.xml  tc0c20s4cf2.xml  tc0c20s4ct2.xml  tc0c40s5cf0.xml  tc0c40s5cf4.xml  tc0c40s5ct0.xml  tc0c40s5ct4.xml  tc0c40s8cf4.xml  tc0c40s8ct0.xml  tc0c40s8ct4.xml  tc0c80s12cf0.xml  tc0c80s12cf1.xml  tc0c80s12ct0.xml  tc0c80s12ct1.xml  tc0c80s8cf0.xml  tc0c80s8cf1.xml  tc0c80s8ct0.xml  tc0c80s8ct1.xml  tc1c10s2cf2.xml  tc1c10s2cf3.xml  tc1c10s2cf4.xml  tc1c10s2ct2.xml  tc1c10s2ct3.xml  tc1c10s2ct4.xml  tc1c10s3cf2.xml  tc1c10s3cf3.xml  tc1c10s3cf4.xml  (+56 more)
Cluster/: cluster.csv  plotCluste.py
Irace/: default.txt  parameters.txt  scenario.txt  target-runner
Projeto/: Para Fazer.md
Projeto/.obsidian/: app.json  appearance.json  graph.json  workspace
TesteSensibilidade/: sensibilidadeTestes100.py
instancias/: Readme.txt
instancias/2e-vrp/: Readme.txt
instancias/2e-vrp-tw/Customer_10/: C101_C10x.txt  C104_C10x.txt  C202_C10x.txt  C205_C10x.txt  R102_C10x.txt  R103_C10x.txt  R201_C10x.txt  R203_C10x.txt  RC102_C10x.txt  RC108_C10x.txt  RC201_C10x.txt  RC205_C10x.txt
instancias/2e-vrp-tw/Customer_100/: C105_21x.txt  C106_21x.txt  C109_21x.txt  C202_21x.txt  C203_21x.txt  C205_21x.txt  C206_21x.txt  C208_21x.txt  R102_21x.txt  R103_21x.txt  R104_21x.txt  R105_21x.txt  R106_21x.txt  R107_21x.txt  R108_21x.txt  R201_21x.txt  R202_21x.txt  R203_21x.txt  R204_21x.txt  R205_21x.txt  R206_21x.txt  R207_21x.txt  R208_21x.txt  R209_21x.txt  R210_21x.txt  R211_21x.txt  RC102_21x.txt  RC103_21x.txt  RC104_21x.txt  RC105_21x.txt  RC106_21x.txt  RC107_21x.txt  RC108_21x.txt  RC202_21x.txt  RC203_21x.txt  RC204_21x.txt  RC205_21x.txt  RC206_21x.txt  RC207_21x.txt  RC208_21x.txt
instancias/2e-vrp-tw/Customer_100_0/: C101_21x.txt  C102_21x.txt  C103_21x.txt  C104_21x.txt  C107_21x.txt  C108_21x.txt  C201_21x.txt  C204_21x.txt  C207_21x.txt
instancias/2e-vrp-tw/Customer_100_1/: R101_21x.txt  R109_21x.txt  R110_21x.txt  R111_21x.txt  R112_21x.txt
instancias/2e-vrp-tw/Customer_100_2/: RC101_21x.txt  RC201_21x.txt
instancias/2e-vrp-tw/Customer_15/: C103_C15x.txt  C106_C15x.txt  C202_C15x.txt  C208_C15x.txt  R102_C15x.txt  (+7 more)
instancias/Set1/: E-c10-s3-r1-1.txt  E-c10-s3-r1-10.txt  E-c10-s3-r1-11.txt  E-c10-s3-r1-12.txt  E-c10-s3-r1-2.txt  E-c10-s3-r1-3.txt  E-c10-s3-r1-4.txt  E-c10-s3-r1-5.txt  E-c10-s3-r1-6.txt  E-c10-s3-r1-7.txt  E-c10-s3-r1-8.txt  E-c10-s3-r1-9.txt
instancias/Set2/: E-c20-s2-r2-1.txt  E-c20-s2-r2-10.txt  E-c20-s2-r2-11.txt  E-c20-s2-r2-12.txt  E-c20-s2-r2-2.txt  E-c20-s2-r2-3.txt  E-c20-s2-r2-4.txt  E-c20-s2-r2-5.txt  E-c20-s2-r2-6.txt  E-c20-s2-r2-7.txt  E-c20-s2-r2-8.txt  E-c20-s2-r2-9.txt
instancias/Set3/: E-c20-s2-r2-13.txt  E-c20-s2-r2-14.txt  E-c20-s2-r2-15.txt  E-c20-s2-r2-16.txt  E-c20-s2-r2-17.txt  E-c20-s2-r2-18.txt  E-c20-s2-r2-19.txt  E-c20-s2-r2-20.txt  E-c20-s2-r2-21.txt  E-c20-s2-r2-22.txt  E-c20-s2-r2-23.txt  E-c20-s2-r2-24.txt
pdfs/: Alterações.txt
src/: Auxiliary.cpp  Auxiliary.h  CMakeLists.txt  Constants.h  Depot.cpp  Depot.h  EvRoute.cpp  EvRoute.h  Grasp.cpp  Grasp.h  Heap.h  IG.cpp  IG.h  Instance.cpp  Instance.h  LocalSearch.cpp  LocalSearch.h  PreProcessamento.cpp  PreProcessamento.h  Route.cpp  Route.h  Satelite.cpp  Satelite.h  Solucao  Solucao.cpp  Solucao.h  Solution.cpp  Solution.h  Teste.cpp  Teste.h  TruckRoute.cpp  TruckRoute.h  VetorHash.h  ViabilizadorRotaEv.cpp  ViabilizadorRotaEv.h  Vnd.cpp  Vnd.h  algorithm.cpp  algorithm.h  common.h  (+12 more)
src/ACO/: Aco.cpp  Aco.h  CMakeLists.txt
src/AG/: Ag.cpp  Ag.h  CMakeLists.txt
src/BUSCA_LOCAL/: CMakeLists.txt  LocalSearch.cpp  LocalSearch.h  LocalSearch2.cpp  LocalSearch2.h
src/CONSTRUTIVO/: CMakeLists.txt  Construtivo.cpp  Construtivo.h  Construtivo2.cpp  Construtivo2.h  Construtivo3.cpp  Construtivo3.h  Construtivo4.cpp  Construtivo4.h
src/HASH/: Hash.cpp  Hash.h
src/INSTANCIA/: CMakeLists.txt  Instance.cpp  Instance.h  Instancia.h  Parametros.cpp  Parametros.h  ParametrosEntrada.cpp  ParametrosEntrada.h  safe_matrix.h  safe_vector.h  sefe_array.h
src/K_MEANS/: CMakeLists.txt  k_means.cpp  k_means.h
src/MIP/: Modelo.cpp  Modelo.h  Variaveis.cpp  Variaveis.h
src/__DEL__HASH__DEL__/: CMakeLists.txt  Hash.h
utils/: 2eRotas.py  RC108_C10x_20_07_.xcf  plotInstance.py  plotSolution.py  plotSolution_primeiro_nivel.py  rotas2eevrp.py
utils/Imagens Apresentacao/: C204_21x_EXE_8.txt  Resultados 2E-EVRP-TW - 1 - Página3.tsv
utils/instanciasMod/: C101_C10x.txt  C101_C5x.txt  C102_21x.txt  C103_C15x.txt  C103_C5x.txt  C104_C10x.txt  C105_21x.txt  C106_C15x.txt  C202_C10x.txt  C202_C15x.txt  C203_21x.txt  C205_21x.txt  C205_C10x.txt  C206_C5x.txt  C208_C15x.txt  C208_C5x.txt  R102_C10x.txt  R102_C15x.txt  R103_C10x.txt  R104_C5x.txt  R105_21x.txt  R105_C15x.txt  R105_C5x.txt  R109_21x.txt  R201_C10x.txt  R202_C15x.txt  R202_C5x.txt  R203_C10x.txt  R203_C5x.txt  R209_C15x.txt  RC101_21x.txt  RC102_C10x.txt  RC103_C15x.txt  RC105_C5x.txt  RC108_C10x.txt  RC108_C15x.txt  RC108_C5x.txt  RC201_C10x.txt  RC202_C15x.txt  RC204_21x.txt  (+4 more)
utils/solucao/: C101_21x.txt  C101_C10x.txt  C101_C5x.txt  C102_21x.txt  C103_C15x.txt  C103_C5x.txt  C104_C10x.txt  C106_C15x.txt  C202_C10x.txt  C202_C15x.txt  C205_C10x.txt  C206_C5x.txt  C208_C15x.txt  C208_C5x.txt  R102_C10x.txt  R102_C15x.txt  R103_C10x.txt  R104_C5x.txt  R105_C15x.txt  R105_C5x.txt  R201_C10x.txt  R202_C15x.txt  R202_C5x.txt  R203_C10x.txt  R203_C5x.txt  R209_C15x.txt  RC102_C10x.txt  RC103_C15x.txt  RC105_C5x.txt  RC108_C10x.txt  RC108_C15x.txt  RC108_C5x.txt  RC201_C10x.txt  RC202_C15x.txt  RC204_C15x.txt  RC204_C5x.txt  RC205_C10x.txt  RC208_C5x.txt
(+98 files in other folders)
